# target-miso

./: .gitignore  Pipfile  README.md  VERSION  config.json.example  miso.py  setup.cfg  setup.py  target_miso.py
.github/workflows/: release.yml  run-tests.yml
examples/: .gitignore
examples/basic/: meltano.yml
examples/basic/data/: user.csv
examples/csv/: .env.example  README.md  meltano.yml
examples/csv/template/: user.jinja
examples/postgresql/: .env.example  README.md  meltano.yml
examples/postgresql/data/: generate-users.sh  setup-users-table.sql
examples/postgresql/template/: public-users.jinja
target_miso/: __init__.py  extensions.py  miso.py  py_extensions.py  target.py
tests/: test_miso_client.py  test_persist_messages.py  test_transform.py
tests/templates/: interaction.jinja
