[metadata]
name = target-miso
version = file: VERSION
description = A Singer target for writing data to Miso API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
keywords = singer, singer.io, target, ETL, ELT, MisoAI, Miso, Meltano
url = https://github.com/MisoAI/target-miso
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
author = Hash Lin
author_email = hashlin@askmiso.com

[options]
packages =
    target_miso
install_requires =
    singer-python
    requests
    jsonnet
    sentry-sdk
    simplejson
    dateparser
    Jinja2

[options.entry_points]
console_scripts =
    target-miso = target_miso:main
